
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef void* __u32 ;
typedef int __u16 ;


 int sport ;
 int sport2 ;
 void* tsn ;
 void* tsn2 ;
 void* vtag ;
 void* vtag2 ;

void swap_to_SLAB_chunk()
{
  __u32 tmp;
  __u16 tmp16;

  tmp = tsn;
  tsn = tsn2;
  tsn2 = tmp;

  tmp = vtag;
  vtag = vtag2;
  vtag2 = tmp;

  tmp16 = sport;
  sport = sport2;
  sport2 = tmp16;
}
