; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_8556.c_swap_to_SLAB_chunk.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_8556.c_swap_to_SLAB_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tsn = common dso_local global i8* null, align 8
@tsn2 = common dso_local global i8* null, align 8
@vtag = common dso_local global i8* null, align 8
@vtag2 = common dso_local global i8* null, align 8
@sport = common dso_local global i32 0, align 4
@sport2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swap_to_SLAB_chunk() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load i8*, i8** @tsn, align 8
  store i8* %3, i8** %1, align 8
  %4 = load i8*, i8** @tsn2, align 8
  store i8* %4, i8** @tsn, align 8
  %5 = load i8*, i8** %1, align 8
  store i8* %5, i8** @tsn2, align 8
  %6 = load i8*, i8** @vtag, align 8
  store i8* %6, i8** %1, align 8
  %7 = load i8*, i8** @vtag2, align 8
  store i8* %7, i8** @vtag, align 8
  %8 = load i8*, i8** %1, align 8
  store i8* %8, i8** @vtag2, align 8
  %9 = load i32, i32* @sport, align 4
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* @sport2, align 4
  store i32 %10, i32* @sport, align 4
  %11 = load i32, i32* %2, align 4
  store i32 %11, i32* @sport2, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
